--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hotel Label</title>
+    <title>Hotel LABEL</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/slick.css">
-    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/animate.min.css">
     <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"> -->
     <script src="https://kit.fontawesome.com/24f221c4c5.js" crossorigin="anonymous"></script>
     <script src="js/jquery-3.5.1.min.js"></script>
@@ -27,7 +27,7 @@
                 </h1>
                 <div class="nav">
                     <ul class="depth1">
-                        <li><a href="">About</a></li>
+                        <li><a href="">Hotel</a></li>
                         <li><a href="/rooms.html">Rooms</a>
                             <ul class="depth2">
                                 <li><a href="">Standard</a></li>
@@ -85,6 +85,77 @@
                         </div>
                     </div>
                     <button type="button" class="playstop"><i class="fas fa-pause"></i></button>
+                </article>
+                <article id="article2">
+                    <h2>Hotel LABEL</h2>
+                    <p>항상 <strong>최선의 서비스</strong>를 제공하겠습니다.</p>
+                    <ul class="row">
+                        <li class="aboutbox">
+                            <a href="/hotel.html">
+                                <div class="imgbox">
+                                    <img src="img/slide3.jpg" alt="">
+                                    <div class="sbox">
+                                        <p>About</p>
+                                        <p>Hotel LABEL</p>
+                                    </div>
+                                    <div class="line">
+                                        <div class="topline"></div>
+                                        <div class="bottomline"></div>
+                                        <div class="rightline"></div>
+                                        <div class="leftline"></div>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="aboutbox">
+                           <a href="/rooms.html">
+                                <div class="imgbox">
+                                    <img src="img/slide5.jpg" alt="">
+                                    <div class="sbox">
+                                        <p>About</p>
+                                        <p>Rooms</p>
+                                    </div>
+                                    <div class="line">
+                                        <div class="topline"></div>
+                                        <div class="bottomline"></div>
+                                        <div class="rightline"></div>
+                                        <div class="leftline"></div>
+                                    </div>
+                                </div>
+                           </a>
+                        </li>
+                        <li class="aboutbox">
+                            <a href="/facility.html">
+                                <div class="imgbox">
+                                    <img src="img/slide2.jpg" alt="">
+                                    <div class="sbox">
+                                        <p>About</p>
+                                        <p>Facilities</p>
+                                    </div>
+                                    <div class="line">
+                                        <div class="topline"></div>
+                                        <div class="bottomline"></div>
+                                        <div class="rightline"></div>
+                                        <div class="leftline"></div>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </article>
+                <article id="article3">
+                    <div class="fxment">
+                        <h3>호텔 레이블</h3>
+                        <p>늘 최상의 시설에서 좋은 서비스를 제공 할 수 있도록 노력하겠습니다. </p>
+                        <button><a href="tel:02-123-4567"><i class="fa-solid fa-phone"></i>전화 문의</a></button>
+                    </div>
+                </article>
+                <article id="article4">
+                    <h2>Location</h2>
+                    <p>주소 : 경기 안산시 단원구 고잔동 537-3</p>
+                    <div class="map">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3173.058376156397!2d126.83366591529258!3d37.317444879845254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357b6f1b55240b65%3A0x38b18bbc8db99390!2z6rK96riw64-EIOyViOyCsOyLnCDri6jsm5Dqtawg6rOg7J6U64-ZIDUzNy0z!5e0!3m2!1sko!2skr!4v1649904860461!5m2!1sko!2skr" width="100%" height="370" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
                 </article>
             </div>
         </section>
