--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </h1>
                 <div class="nav">
                     <ul class="depth1">
-                        <li><a href="">Hotel</a></li>
+                        <li><a href="/hotel.html">Hotel</a></li>
                         <li><a href="/rooms.html">Rooms</a>
                             <ul class="depth2">
                                 <li><a href="">Standard</a></li>
@@ -38,8 +38,8 @@
                                 <li><a href="">Party Room</a></li>
                             </ul>
                         </li>
-                        <li><a href="">Facilities</a></li>
-                        <li><a href="">Location</a></li>
+                        <li><a href="/facility.html">Facilities</a></li>
+                        <li><a href="/location.html">Location</a></li>
                     </ul>
                 </div>
             </div>
