--- a/facility.html
+++ b/facility.html
@@ -30,12 +30,12 @@
                         <li><a href="/hotel.html">Hotel</a></li>
                         <li><a href="/rooms.html">Rooms</a>
                             <ul class="depth2">
-                                <li><a href="">Standard</a></li>
-                                <li><a href="">Premier</a></li>
-                                <li><a href="">Premier-2PC</a></li>
-                                <li><a href="">Sweet</a></li>
-                                <li><a href="">Terrace sweet</a></li>
-                                <li><a href="">Party Room</a></li>
+                                <li><a href="/rooms.html">Standard</a></li>
+                                <li><a href="/rooms.html">Premier</a></li>
+                                <li><a href="/rooms.html">Premier-2PC</a></li>
+                                <li><a href="/rooms.html">Sweet</a></li>
+                                <li><a href="/rooms.html">Terrace sweet</a></li>
+                                <li><a href="/rooms.html">Party Room</a></li>
                             </ul>
                         </li>
                         <li><a href="/facility.html">Facilities</a></li>
