--- a/rooms.html
+++ b/rooms.html
@@ -30,12 +30,12 @@
                         <li><a href="/hotel.html">Hotel</a></li>
                         <li><a href="/rooms.html">Rooms</a>
                             <ul class="depth2">
-                                <li><a href="">Standard</a></li>
-                                <li><a href="">Premier</a></li>
-                                <li><a href="">Premier-2PC</a></li>
-                                <li><a href="">Sweet</a></li>
-                                <li><a href="">Terrace sweet</a></li>
-                                <li><a href="">Party Room</a></li>
+                                <li><a href="/rooms.html">Standard</a></li>
+                                <li><a href="/rooms.html">Premier</a></li>
+                                <li><a href="/rooms.html">Premier-2PC</a></li>
+                                <li><a href="/rooms.html">Sweet</a></li>
+                                <li><a href="/rooms.html">Terrace sweet</a></li>
+                                <li><a href="/rooms.html">Party Room</a></li>
                             </ul>
                         </li>
                         <li><a href="/facility.html">Facilities</a></li>
@@ -52,7 +52,232 @@
                         <h2>Rooms</h2>
                         <p>Rooms멘트</p>
                     </div>
-                 </div>
+                </div>
+                <div id="rocont">
+                    <ul class="roomlist">
+                        <li class="active"><a href="#"></a>Standard</li>
+                        <li class=""><a href="#"></a>Premier</li>
+                        <li class=""><a href="#"></a>Premier-2PC</li>
+                        <li class=""><a href="#"></a>Sweet</li>
+                        <li class=""><a href="#"></a>Terrace sweet</li>
+                        <li class=""><a href="#"></a>Party Room</li>
+                    </ul>
+                    <div class="rooms">
+                        <div class="active stand">
+                            <div class="slide_group2">
+                                <div class="slide slide1">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide2">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide3">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide4">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide5">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide6">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide7">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide8">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide9">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide10">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide11">
+                                    <div class="img"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="prem">
+                            <div class="slide_group2">
+                                <div class="slide slide1">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide2">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide3">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide4">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide5">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide6">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide7">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide8">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide9">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide10">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide11">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide12">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide13">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide14">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide15">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide16">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide17">
+                                    <div class="img"></div>
+                                </div>
+                            </div>
+                        </div> 
+                        <div class="prempc">
+                            <div class="slide_group2">
+                                <div class="slide slide1">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide2">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide3">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide4">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide5">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide6">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide7">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide8">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide9">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide10">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide11">
+                                    <div class="img"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="sweet">
+                            <div class="slide_group2">
+                                <div class="slide slide1">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide2">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide3">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide4">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide5">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide6">
+                                    <div class="img"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="terra">
+                            <div class="slide_group2">
+                                <div class="slide slide1">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide2">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide3">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide4">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide5">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide6">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide7">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide8">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide9">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide10">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide11">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide12">
+                                    <div class="img"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="party">
+                            <div class="slide_group2">
+                                <div class="slide slide1">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide2">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide3">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide4">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide5">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide6">
+                                    <div class="img"></div>
+                                </div>
+                            </div>
+                        </div> 
+                    </div>
+                </div>
             </div>
         </section>
         <footer id="footer">
