--- a/hotel.html
+++ b/hotel.html
@@ -30,12 +30,12 @@
                         <li><a href="/hotel.html">Hotel</a></li>
                         <li><a href="/rooms.html">Rooms</a>
                             <ul class="depth2">
-                                <li><a href="">Standard</a></li>
-                                <li><a href="">Premier</a></li>
-                                <li><a href="">Premier-2PC</a></li>
-                                <li><a href="">Sweet</a></li>
-                                <li><a href="">Terrace sweet</a></li>
-                                <li><a href="">Party Room</a></li>
+                                <li><a href="/rooms.html">Standard</a></li>
+                                <li><a href="/rooms.html">Premier</a></li>
+                                <li><a href="/rooms.html">Premier-2PC</a></li>
+                                <li><a href="/rooms.html">Sweet</a></li>
+                                <li><a href="/rooms.html">Terrace sweet</a></li>
+                                <li><a href="/rooms.html">Party Room</a></li>
                             </ul>
                         </li>
                         <li><a href="/facility.html">Facilities</a></li>
@@ -52,7 +52,27 @@
                         <h2>Hotel</h2>
                         <p>LABEL</p>
                     </div>
-                 </div>
+                </div>
+                <div class="row">
+                    <div id="hocont">
+                        <div class="left">
+                            <img src="img/hotel.jpg" alt="">
+                        </div>
+                        <div class="right">
+                            <h3>Hotel LABEL</h3>
+                            <p>
+                                넘버25호텔 청주터미널점 홈페이지를 방문해 주셔서 대단히 감사합니다.<br><br>
+                                넘버25호텔은 '25시, 세상 어떤 시계에도 존재하지 않는 순간. 현실에서 벗어난 시간'처럼 일상에서 벗어나 찾게 되는 호텔이라는 의미입니다.<br><br>
+                                넘버25호텔 청주터미널점은 청주 IC와 서청주IC에 인접하여 경부고속도로 및 중부고속도로와의 접근성이 우수하고
+                                청주 시외버스터미널, 고속버스터미널, 청주공항, 충북대학교 등 호텔 주변으로 주요 교통, 관공서, 관광지 등과 인접하여
+                                여행객 및 관광객, 비즈니스 고객 모두 편리하게 이용하실 수 있습니다.<br><br>
+                                내외국인 관광객과 기업인들을 위한 최적의 호텔로 최고의 서비스를 제공합니다.<br>
+                                고객님들의 많은 방문을 부탁드립니다.<br><br>
+                                감사합니다.
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <footer id="footer">
