--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
                         <li><a href="hotel.html">Hotel</a></li>
                         <li><a href="rooms.html">Rooms</a>
                             <ul class="depth2">
-                                <li><a href="page.html">Standard</a></li>
-                                <li><a href="page.html">Premier</a></li>
-                                <li><a href="page.html">Premier-2PC</a></li>
-                                <li><a href="page.html">Sweet</a></li>
-                                <li><a href="page.html">Terrace sweet</a></li>
-                                <li><a href="page.html">Party Room</a></li>
+                                <li><a href="rooms.html">Standard</a></li>
+                                <li><a href="rooms.html">Premier</a></li>
+                                <li><a href="rooms.html">Premier-2PC</a></li>
+                                <li><a href="rooms.html">Sweet</a></li>
+                                <li><a href="rooms.html">Terrace sweet</a></li>
+                                <li><a href="rooms.html">Party Room</a></li>
                             </ul>
                         </li>
-                        <li><a href="pade.html">Facilities</a></li>
-                        <li><a href="page.html">Location</a></li>
+                        <li><a href="facility.html">Facilities</a></li>
+                        <li><a href="location.html">Location</a></li>
                     </ul>
                 </div>
             </div>
