--- a/rooms.html
+++ b/rooms.html
@@ -27,19 +27,19 @@
                 </h1>
                 <div class="nav">
                     <ul class="depth1">
-                        <li><a href="/hotel.html">Hotel</a></li>
-                        <li><a href="/rooms.html">Rooms</a>
+                        <li><a href="hotel.html">Hotel</a></li>
+                        <li><a href="rooms.html">Rooms</a>
                             <ul class="depth2">
-                                <li><a href="/rooms.html">Standard</a></li>
-                                <li><a href="/rooms.html">Premier</a></li>
-                                <li><a href="/rooms.html">Premier-2PC</a></li>
-                                <li><a href="/rooms.html">Sweet</a></li>
-                                <li><a href="/rooms.html">Terrace sweet</a></li>
-                                <li><a href="/rooms.html">Party Room</a></li>
+                                <li><a href="rooms.html">Standard</a></li>
+                                <li><a href="rooms.html">Premier</a></li>
+                                <li><a href="rooms.html">Premier-2PC</a></li>
+                                <li><a href="rooms.html">Sweet</a></li>
+                                <li><a href="rooms.html">Terrace sweet</a></li>
+                                <li><a href="rooms.html">Party Room</a></li>
                             </ul>
                         </li>
-                        <li><a href="/facility.html">Facilities</a></li>
-                        <li><a href="/location.html">Location</a></li>
+                        <li><a href="facility.html">Facilities</a></li>
+                        <li><a href="location.html">Location</a></li>
                     </ul>
                 </div>
             </div>
