--- a/facility.html
+++ b/facility.html
@@ -47,7 +47,7 @@
         <section id="section">
             <div id="main">
                 <div class="topimg">
-                    <img src="/img/topimg1.jpg" alt="">
+                    <img src="img/topimg1.jpg" alt="">
                     <div class="toptit">
                         <h2>Facilities</h2>
                         <p>객실 내부 시설 / 프론트 및 그 외 편의시설</p>
