--- a/rooms.html
+++ b/rooms.html
@@ -47,7 +47,7 @@
         <section id="section">
             <div id="main">
                 <div class="topimg">
-                    <img src="/img/topimg2.jpg" alt="">
+                    <img src="img/topimg2.jpg" alt="">
                     <div class="toptit">
                         <h2>Rooms</h2>
                         <p>Rooms멘트</p>
