--- a/hotel.html
+++ b/hotel.html
@@ -47,7 +47,7 @@
         <section id="section">
             <div id="main">
                 <div class="topimg">
-                    <img src="/img/topimg1.jpg" alt="">
+                    <img src="img/topimg1.jpg" alt="">
                     <div class="toptit">
                         <h2>Hotel</h2>
                         <p>LABEL</p>
