--- a/location.html
+++ b/location.html
@@ -47,7 +47,7 @@
         <section id="section">
             <div id="main">
                 <div class="topimg">
-                    <img src="/img/topimg2.jpg" alt="">
+                    <img src="img/topimg2.jpg" alt="">
                     <div class="toptit">
                         <h2>Location</h2>
                         <p>안산 레이블 호텔</p>
