--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <p>항상 <strong>최선의 서비스</strong>를 제공하겠습니다.</p>
                     <ul class="row">
                         <li class="aboutbox">
-                            <a href="/hotel.html">
+                            <a href="hotel.html">
                                 <div class="imgbox">
                                     <img src="img/slide3.jpg" alt="">
                                     <div class="sbox">
@@ -108,7 +108,7 @@
                             </a>
                         </li>
                         <li class="aboutbox">
-                           <a href="/rooms.html">
+                           <a href="rooms.html">
                                 <div class="imgbox">
                                     <img src="img/slide5.jpg" alt="">
                                     <div class="sbox">
@@ -125,7 +125,7 @@
                            </a>
                         </li>
                         <li class="aboutbox">
-                            <a href="/facility.html">
+                            <a href="facility.html">
                                 <div class="imgbox">
                                     <img src="img/slide2.jpg" alt="">
                                     <div class="sbox">
