--- a/rooms.html
+++ b/rooms.html
@@ -290,7 +290,7 @@
                                     class="blind">전화걸기</span></a>
                             <a href="mailto:tsalt@hanmail.net"><i class="fas fa-at"></i><span
                                     class="blind">이메일</span></a>
-                            <a href="#none"><i class="fas fa-map-marked-alt"></i><span class="blind">구글맵</span></a>
+                            <a href="https://map.kakao.com/?urlX=463628.0&urlY=1060650.0&name=%EA%B2%BD%EA%B8%B0%20%EC%95%88%EC%82%B0%EC%8B%9C%20%EB%8B%A8%EC%9B%90%EA%B5%AC%20%EA%B3%A0%EC%9E%94%EB%8F%99%20537-3&map_type=TYPE_MAP&from=roughmap"><i class="fas fa-map-marked-alt"></i><span class="blind">구글맵</span></a>
                         </div>
                     </div>
                     <div class="company">
