--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/animate.min.css">
+    <link rel="stylesheet" href="css/rwdsetting.css">
     <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"> -->
     <script src="https://kit.fontawesome.com/24f221c4c5.js" crossorigin="anonymous"></script>
     <script src="js/jquery-3.5.1.min.js"></script>
@@ -154,7 +155,6 @@
                     <h2>Location</h2>
                     <p>주소 : 경기 안산시 단원구 고잔동 537-3</p>
                     <div class="map">
-                        <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3173.058376156397!2d126.83366591529258!3d37.317444879845254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357b6f1b55240b65%3A0x38b18bbc8db99390!2z6rK96riw64-EIOyViOyCsOyLnCDri6jsm5Dqtawg6rOg7J6U64-ZIDUzNy0z!5e0!3m2!1sko!2skr!4v1649904860461!5m2!1sko!2skr" width="100%" height="370" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
                         <div id="daumRoughmapContainer1650028533964" class="root_daum_roughmap root_daum_roughmap_landing" style="width:100%"></div>
                     </div>
                 </article>
