--- a/location.html
+++ b/location.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/animate.min.css">
     <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"> -->
+    <link rel="stylesheet" href="css/rwdsetting.css">
     <script src="https://kit.fontawesome.com/24f221c4c5.js" crossorigin="anonymous"></script>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/slick.min.js"></script>
