--- a/facility.html
+++ b/facility.html
@@ -22,9 +22,9 @@
 <body>
     <div id="wrap">
         <Header id="header">
-            <div class="row">
+            <div class="row cf">
                 <h1>
-                    <a href="index.html"><img src="img/logo_b.png" alt=""></a>
+                    <a href="index.html"><img src="img/logo_f.png" alt=""></a>
                 </h1>
                 <div class="nav">
                     <ul class="depth1">
@@ -48,7 +48,7 @@
         <section id="section">
             <div id="main">
                 <div class="topimg">
-                    <img src="img/topimg1.jpg" alt="">
+                    <img src="img/photo6sm.jpg" alt="">
                     <div class="toptit">
                         <h2>Facilities</h2>
                         <p>객실 내부 시설 / 프론트 및 그 외 편의시설</p>
@@ -102,26 +102,28 @@
             <div class="info">
                 <div class="row">
                     <div class="infofst">
-                        <img src="img/logo_b.png" alt="">
+                        <img src="img/logo_f.png" alt="">
                         <div class="contact">
-                            <a href="tel:02-123-4567"><i class="fas fa-phone-square"></i><span
+                            <a href="tel:031-411-5373"><i class="fas fa-phone-square"></i><span
                                     class="blind">전화걸기</span></a>
-                            <a href="mailto:tsalt@hanmail.net"><i class="fas fa-at"></i><span
+                            <a href="mailto:the.label.ansan@gmail.com"><i class="fas fa-at"></i><span
                                     class="blind">이메일</span></a>
-                            <a href="https://map.kakao.com/?urlX=463628.0&urlY=1060650.0&name=%EA%B2%BD%EA%B8%B0%20%EC%95%88%EC%82%B0%EC%8B%9C%20%EB%8B%A8%EC%9B%90%EA%B5%AC%20%EA%B3%A0%EC%9E%94%EB%8F%99%20537-3&map_type=TYPE_MAP&from=roughmap"><i class="fas fa-map-marked-alt"></i><span class="blind">구글맵</span></a>
+                            <a
+                                href="https://map.kakao.com/?urlX=463628.0&urlY=1060650.0&name=%EA%B2%BD%EA%B8%B0%20%EC%95%88%EC%82%B0%EC%8B%9C%20%EB%8B%A8%EC%9B%90%EA%B5%AC%20%EA%B3%A0%EC%9E%94%EB%8F%99%20537-3&map_type=TYPE_MAP&from=roughmap"><i
+                                    class="fas fa-map-marked-alt"></i><span class="blind">구글맵</span></a>
                         </div>
                     </div>
                     <div class="company">
                         <ul>
-                            <li>Hotel LABEL</li>
-                            <li>대표 : 대표이름</li>
-                            <li>대표번호 : 00-000-0000</li>
-                            <li>팩스번호 : 00-000-0000</li>
+                            <li>업체명 : 호텔레이블 안산중앙점</li>
+                            <li>대표 : 홍정환</li>
+                            <li>주소 : 경기도 안산시 단원구 고잔2길 42 6층 ( 고잔동 537-3 )</li>
+                            <li>대표번호 : 031-411-5373</li>
                         </ul>
                         <ul>
-                            <li>사업자등록번호 : 123-45-12345</li>
-                            <li>통신판매업신고번호 : 제 2016-서울지역-1234호</li>
-                            <li>주소 : 서울시 지역구 지명로12</li>
+                            <li>계좌번호 : 카카오뱅크 7979-36-87581 ( 예금주 : 홍정환 )</li>
+                            <li>사업자번호 : 785-88-01980</li>
+                            <li>이메일 : the.label.ansan@gmail.com</li>
                         </ul>
                     </div>
                 </div>
