--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/animate.min.css">
-    <link rel="stylesheet" href="css/rwdsetting.css">
+    <!-- <link rel="stylesheet" href="css/rwdsetting.css"> -->
     <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"> -->
     <script src="https://kit.fontawesome.com/24f221c4c5.js" crossorigin="anonymous"></script>
     <script src="js/jquery-3.5.1.min.js"></script>
@@ -22,9 +22,9 @@
 <body>
     <div id="wrap">
         <Header id="header">
-            <div class="row">
+            <div class="row cf">
                 <h1>
-                    <a href="index.html"><img src="img/logo_b.png" alt=""></a>
+                    <a href="index.html"><img src="img/logo_f.png" alt=""></a>
                 </h1>
                 <div class="nav">
                     <ul class="depth1">
@@ -94,7 +94,7 @@
                         <li class="aboutbox">
                             <a href="hotel.html">
                                 <div class="imgbox">
-                                    <img src="img/slide3.jpg" alt="">
+                                    <img src="img/photo1.jpg" alt="">
                                     <div class="sbox">
                                         <p>About</p>
                                         <p>Hotel LABEL</p>
@@ -109,9 +109,9 @@
                             </a>
                         </li>
                         <li class="aboutbox">
-                           <a href="rooms.html">
+                            <a href="rooms.html">
                                 <div class="imgbox">
-                                    <img src="img/slide5.jpg" alt="">
+                                    <img src="img/photo2.jpg" alt="">
                                     <div class="sbox">
                                         <p>About</p>
                                         <p>Rooms</p>
@@ -123,12 +123,12 @@
                                         <div class="leftline"></div>
                                     </div>
                                 </div>
-                           </a>
+                            </a>
                         </li>
                         <li class="aboutbox">
                             <a href="facility.html">
                                 <div class="imgbox">
-                                    <img src="img/slide2.jpg" alt="">
+                                    <img src="img/photo6.jpg" alt="">
                                     <div class="sbox">
                                         <p>About</p>
                                         <p>Facilities</p>
@@ -148,14 +148,15 @@
                     <div class="fxment">
                         <h3>호텔 레이블</h3>
                         <p>늘 최상의 시설에서 좋은 서비스를 제공 할 수 있도록 노력하겠습니다. </p>
-                        <button><a href="tel:02-123-4567"><i class="fa-solid fa-phone"></i>전화 문의</a></button>
+                        <button><a href="tel:031-411-5373"><i class="fa-solid fa-phone"></i>전화 문의</a></button>
                     </div>
                 </article>
                 <article id="article4">
                     <h2>Location</h2>
                     <p>주소 : 경기 안산시 단원구 고잔동 537-3</p>
                     <div class="map">
-                        <div id="daumRoughmapContainer1650028533964" class="root_daum_roughmap root_daum_roughmap_landing" style="width:100%"></div>
+                        <div id="daumRoughmapContainer1650028533964"
+                            class="root_daum_roughmap root_daum_roughmap_landing" style="width:100%"></div>
                     </div>
                 </article>
             </div>
@@ -164,26 +165,28 @@
             <div class="info">
                 <div class="row">
                     <div class="infofst">
-                        <img src="img/logo_b.png" alt="">
+                        <img src="img/logo_f.png" alt="">
                         <div class="contact">
-                            <a href="tel:02-123-4567"><i class="fas fa-phone-square"></i><span
+                            <a href="tel:031-411-5373"><i class="fas fa-phone-square"></i><span
                                     class="blind">전화걸기</span></a>
-                            <a href="mailto:tsalt@hanmail.net"><i class="fas fa-at"></i><span
+                            <a href="mailto:the.label.ansan@gmail.com"><i class="fas fa-at"></i><span
                                     class="blind">이메일</span></a>
-                            <a href="https://map.kakao.com/?urlX=463628.0&urlY=1060650.0&name=%EA%B2%BD%EA%B8%B0%20%EC%95%88%EC%82%B0%EC%8B%9C%20%EB%8B%A8%EC%9B%90%EA%B5%AC%20%EA%B3%A0%EC%9E%94%EB%8F%99%20537-3&map_type=TYPE_MAP&from=roughmap"><i class="fas fa-map-marked-alt"></i><span class="blind">구글맵</span></a>
+                            <a
+                                href="https://map.kakao.com/?urlX=463628.0&urlY=1060650.0&name=%EA%B2%BD%EA%B8%B0%20%EC%95%88%EC%82%B0%EC%8B%9C%20%EB%8B%A8%EC%9B%90%EA%B5%AC%20%EA%B3%A0%EC%9E%94%EB%8F%99%20537-3&map_type=TYPE_MAP&from=roughmap"><i
+                                    class="fas fa-map-marked-alt"></i><span class="blind">구글맵</span></a>
                         </div>
                     </div>
                     <div class="company">
                         <ul>
-                            <li>Hotel LABEL</li>
-                            <li>대표 : 대표이름</li>
-                            <li>대표번호 : 00-000-0000</li>
-                            <li>팩스번호 : 00-000-0000</li>
+                            <li>업체명 : 호텔레이블 안산중앙점</li>
+                            <li>대표 : 홍정환</li>
+                            <li>주소 : 경기도 안산시 단원구 고잔2길 42 6층 ( 고잔동 537-3 )</li>
+                            <li>대표번호 : 031-411-5373</li>
                         </ul>
                         <ul>
-                            <li>사업자등록번호 : 123-45-12345</li>
-                            <li>통신판매업신고번호 : 제 2016-서울지역-1234호</li>
-                            <li>주소 : 서울시 지역구 지명로12</li>
+                            <li>계좌번호 : 카카오뱅크 7979-36-87581 ( 예금주 : 홍정환 )</li>
+                            <li>사업자번호 : 785-88-01980</li>
+                            <li>이메일 : the.label.ansan@gmail.com</li>
                         </ul>
                     </div>
                 </div>
@@ -200,14 +203,15 @@
     </div>
     <script src="js/common.js"></script>
     <script src="js/index.js"></script>
-    <script charset="UTF-8" class="daum_roughmap_loader_script" src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"></script>
+    <script charset="UTF-8" class="daum_roughmap_loader_script"
+        src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"></script>
 
     <script charset="UTF-8">
-	    new daum.roughmap.Lander({
-		    "timestamp" : "1650028533964",
-		    "key" : "29uv7",
-		    "mapHeight" : "370"
-	}).render();
+        new daum.roughmap.Lander({
+            "timestamp": "1650028533964",
+            "key": "29uv7",
+            "mapHeight": "370"
+        }).render();
     </script>
 </body>
 
