--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="img/faviconl.ico" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel LABEL</title>
@@ -11,8 +12,8 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/animate.min.css">
-    <!-- <link rel="stylesheet" href="css/rwdsetting.css"> -->
     <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"> -->
+    <link rel="stylesheet" href="css/rwdsetting.css">
     <script src="https://kit.fontawesome.com/24f221c4c5.js" crossorigin="anonymous"></script>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/slick.min.js"></script>
