--- a/index.html
+++ b/index.html
@@ -54,35 +54,35 @@
                             <div class="img"></div>
                             <div class="slidetext">
                                 <p>Hotel LABEL</p>
-                                <h2>Hotel LABEL과 함께하는<br>편안한 잠자리</h2>
+                                <h2>더 안전하고 행복한 여행을 함께하겠습니다.</h2>
                             </div>
                         </div>
                         <div class="slide slide2">
                             <div class="img"></div>
                             <div class="slidetext">
-                                <p>Opening on Sun. Oct 10, 2021</p>
-                                <h2>Discover The Treasures Of A Egypt<br>Historical Museum</h2>
+                                <p>Hotel LABEL</p>
+                                <h2>더 안전하고 행복한 여행을 함께하겠습니다.</h2>
                             </div>
                         </div>
                         <div class="slide slide3">
                             <div class="img"></div>
                             <div class="slidetext">
-                                <p>3월 3일(수) 오후 5시 온라인 최초 공개!</p>
-                                <h2>Hotel 온라인 채널에서<br>'오페라의 유령'을 만나보세요. </h2>
+                                <p>Hotel LABEL</p>
+                                <h2>더 안전하고 행복한 여행을 함께하겠습니다.</h2>
                             </div>
                         </div>
                         <div class="slide slide4">
                             <div class="img"></div>
                             <div class="slidetext">
-                                <p>2021.03.01 ~ 12.31</p>
-                                <h2>웹즐(WEBZLE)과 함께하는<br>공연예술 리부팅 프로젝트</h2>
+                                <p>Hotel LABEL</p>
+                                <h2>더 안전하고 행복한 여행을 함께하겠습니다.</h2>
                             </div>
                         </div>
                         <div class="slide slide5">
                             <div class="img"></div>
                             <div class="slidetext">
-                                <p>3월 3일(수) 오후 5시 온라인 최초 공개!</p>
-                                <h2>웹즐현대미술관 온라인 채널에서<br>'오페라의 유령'을 만나보세요. </h2>
+                                <p>Hotel LABEL</p>
+                                <h2>더 안전하고 행복한 여행을 함께하겠습니다.</h2>
                             </div>
                         </div>
                     </div>
