--- a/hotel.html
+++ b/hotel.html
@@ -63,12 +63,13 @@
                         <div class="right">
                             <h3>Hotel LABEL</h3>
                             <p>
-                                넘버25호텔 청주터미널점 홈페이지를 방문해 주셔서 대단히 감사합니다.<br><br>
-                                넘버25호텔은 '25시, 세상 어떤 시계에도 존재하지 않는 순간. 현실에서 벗어난 시간'처럼 일상에서 벗어나 찾게 되는 호텔이라는 의미입니다.<br><br>
-                                넘버25호텔 청주터미널점은 청주 IC와 서청주IC에 인접하여 경부고속도로 및 중부고속도로와의 접근성이 우수하고
-                                청주 시외버스터미널, 고속버스터미널, 청주공항, 충북대학교 등 호텔 주변으로 주요 교통, 관공서, 관광지 등과 인접하여
-                                여행객 및 관광객, 비즈니스 고객 모두 편리하게 이용하실 수 있습니다.<br><br>
-                                내외국인 관광객과 기업인들을 위한 최적의 호텔로 최고의 서비스를 제공합니다.<br>
+                                호텔 레이블 안산 중앙점 홈페이지를 찾아주셔서 감사합니다. <br><br>
+                                음악적 색깔이 맞는 사람들끼리 모여 장르를 만드는 것을 "label" 이라 표현합니다.<br>
+                                단순히 머무르는 곳이 아닌 숙박의 취향에 대해 고민하고자 만든 집합체 입니다. <br><br>
+                                호텔 레이블 안산중앙점은 행정,교육,금융 등 안산시의 중심지에 위치한 호텔입니다. <br>
+                                중앙역으로부터 도보 5분 거리에 위치해 있으며 자주식 주차장을 보유하고 있어<br>
+                                주차에 매우 용이하여 편리하게 이용할 수 있습니다. <br><br>
+                                내외국인 관광객과 기업인들을 위한 최적을 호텔로 최고의 서비스를 제공합니다.<br>
                                 고객님들의 많은 방문을 부탁드립니다.<br><br>
                                 감사합니다.
                             </p>
