--- a/index.html
+++ b/index.html
@@ -148,13 +148,13 @@
                 <article id="article3">
                     <div class="fxment">
                         <h3>호텔 레이블</h3>
-                        <p>늘 최상의 시설에서 좋은 서비스를 제공 할 수 있도록 노력하겠습니다. </p>
+                        <p>늘 고객님들의 행복한 여행을 위해 노력하겠습니다. </p>
                         <button><a href="tel:031-411-5373"><i class="fa-solid fa-phone"></i>전화 문의</a></button>
                     </div>
                 </article>
                 <article id="article4">
                     <h2>Location</h2>
-                    <p>주소 : 경기 안산시 단원구 고잔동 537-3</p>
+                    <p>주소 : 경기도 안산시 단원구 고잔2길 42 6층 ( 고잔동 537-3 )</p>
                     <div class="map">
                         <div id="daumRoughmapContainer1650028533964"
                             class="root_daum_roughmap root_daum_roughmap_landing" style="width:100%"></div>
