--- a/location.html
+++ b/location.html
@@ -62,7 +62,7 @@
                     <div class="lobox">
                         <div class="subtxt">
                             <h2><i class="fa-solid fa-location-dot"></i>주소</h2>
-                            <p>경기 안산시 단원구 고잔동 537-3</p>
+                            <p>경기도 안산시 단원구 고잔2길 42 6층 ( 고잔동 537-3 )</p>
                         </div>
                         <div class="subtxt">
                             <h2><i class="fa-solid fa-train-subway"></i>오시는 길</h2>
