--- a/rooms.html
+++ b/rooms.html
@@ -52,7 +52,7 @@
                     <img src="img/photo2sm.jpg" alt="">
                     <div class="toptit">
                         <h2>Rooms</h2>
-                        <p>Rooms멘트</p>
+                        <p>더 안전하고 행복한 여행을 함께하겠습니다.</p>
                     </div>
                 </div>
                 <div id="rocont">
