--- a/hotel.html
+++ b/hotel.html
@@ -51,8 +51,8 @@
                 <div class="topimg">
                     <img src="img/photo1ssm.jpg" alt="">
                     <div class="toptit">
-                        <h2>Hotel</h2>
-                        <p>LABEL</p>
+                        <!-- <h2>Hotel</h2>
+                        <p>LABEL</p> -->
                     </div>
                 </div>
                 <div class="row">
