--- a/location.html
+++ b/location.html
@@ -74,8 +74,8 @@
                                 <li>고잔동 537-3번지 동아아케이드 빌딩 지하 2~3층 주차장 사용 가능합니다.</li>
                                 <li>총 15대의 주차시설을 보유하고 있습니다.</li>
                                 <li>안산 중앙역에서 몇 없는 자주식 주차 시설이 구비되어 있습니다.</li>
-                                <li>상가건물 주차장이다 보니 오전 11시 ~ 오후 6시까지 건물 주차로 인해 주차장이 혼잡할수도 있으니, 이용에 참고 부탁드립니다.</li>
-                                <li>풀차 시 주차권이 필요하니 퇴실 하실 때 주차권 수령 부탁드립니다.</li>
+                                <li>오전11시 ~ 오후6시까지 타 상가 이용고객으로 인해 주차장이 혼잡할 수 있습니다. 이용에 참고 부탁드립니다.</li>
+                                <li>만차 시 주차권이 필요하니 퇴실 하실 때 주차권 수령 부탁드립니다.</li>
                             </ul>
                         </div>
                         <div class="subtxt">
