--- a/stand.html
+++ b/stand.html
@@ -49,51 +49,58 @@
         <section id="section">
             <div id="main">
                 <div class="topimg">
-                    <img src="img/photo6sm.jpg" alt="">
+                    <img src="img/photo2sm.jpg" alt="">
                     <div class="toptit">
-                        <h2>Facilities</h2>
-                        <p>객실 내부 시설 / 프론트 및 그 외 편의시설</p>
+                        <h2>Rooms</h2>
+                        <p>더 안전하고 행복한 여행을 함께하겠습니다.</p>
                     </div>
-                 </div>
-                 <div id="facont">
-                    <div class="fabox">
-                        <div class="subtxt">
-                            <h2>객실내부 시설</h2>
-                            <ul> 
-                                <li><i class="fa-solid fa-bed"></i>Bedroom</li>
-                                <li>프리미엄 구스다운 이불 / 면 60수 이불커버</li>
-                                <li>던롭라텍스 & 포켓독립 스프링 매트리스</li>
-                                <li>사이즈가 다른 베게 구비</li>
-                            </ul>
-                            <ul>
-                                <li><i class="fa-solid fa-bath"></i>Bathroom</li>
-                                <li>샴푸, 컨디셔너, 바디워시 (with Moment 사용)</li>
-                                <li>어메니티 (레이블 자체 로고가 새겨진 욕실용품 사용 - 칫솔, 면도기, 비누, 레이디셋트, 남녀 한방 화장품, 폼클렌져 등)</li>
-                            </ul>
-                            <ul>
-                                <li><i class="fa-solid fa-computer"></i>게이밍 PC 사양</li>
-                                <li>Radeon 3600 CPU</li>
-                                <li>그래픽카드 RTX2060</li>
-                                <li>RAM 16.0GB</li>
-                                <li>32인치 커브드 모니터</li>
-                                <li>기계식 광축 키보드</li>
-                                <li>게이밍 헤드셋 대여가능</li>
-                            </ul>
-                            <ul>
-                                <li><i class="fa-solid fa-face-smile-wink"></i>Others</li>
-                                <li>전 객실 55인치 4K 이상 TV</li>
-                                <li>전 객실 공기청정기 구비</li>
-                                <li>드라이기, 고데기</li>
-                                <li>Free Wifi존</li>
-                                <li>넷플릭스 시청 가능</li>
-                            </ul>
-                        </div>
-                        <div class="subtxt">
-                            <h2>프런트 및 그 외 시설</h2>
-                            <ul>
-                                <li>다양한 간식거리</li>
-                                <li>전자렌지, 정수기, 제빙기, 커피머신</li>
-                            </ul>
+                </div>
+                <div id="rocont">
+                    <div class="roomlist">
+                        <a href="#" class="it">Standard</a>
+                        <a href="prem.html">Premier</a>
+                        <a href="prempc.html">Premier-2PC</a>
+                        <a href="sweet.html">Sweet</a>
+                        <a href="terrace.html">Terrace sweet</a>
+                        <a href="party.html">Party Room</a>
+                    </div>
+                    <div class="rooms">
+                        <div class="stand">
+                            <div class="slide_group2">
+                                <div class="slide slide1">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide2">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide3">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide4">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide5">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide6">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide7">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide8">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide9">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide10">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide11">
+                                    <div class="img"></div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
