--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
                 <div class="nav">
                     <ul class="depth1">
                         <li><a href="hotel.html">Hotel</a></li>
-                        <li><a href="rooms.html">Rooms</a>
+                        <li><a href="stand.html">Rooms</a>
                             <ul class="depth2">
-                                <li><a href="rooms.html">Standard</a></li>
-                                <li><a href="rooms.html">Premier</a></li>
-                                <li><a href="rooms.html">Premier-2PC</a></li>
-                                <li><a href="rooms.html">Sweet</a></li>
-                                <li><a href="rooms.html">Terrace sweet</a></li>
-                                <li><a href="rooms.html">Party Room</a></li>
+                                <li><a href="stand.html">Standard</a></li>
+                                <li><a href="prem.html">Premier</a></li>
+                                <li><a href="prempc.html">Premier-2PC</a></li>
+                                <li><a href="sweet.html">Sweet</a></li>
+                                <li><a href="terrace.html">Terrace sweet</a></li>
+                                <li><a href="party.html">Party Room</a></li>
                             </ul>
                         </li>
                         <li><a href="facility.html">Facilities</a></li>
